<resources>
    <string name="app_name">Octopus</string>
    <string name="prefs_file_name">octopus_prefs</string>
    <string name="create_done">create_done</string>

    <string name="action_refresh">Refresh</string>
    <string name="failure_network_connection">No Network Connection.</string>
    <string name="failure_server_error">Server Error</string>
    <string name="failure_departures_list_unavailable">Departures Unavailable.</string>
    <string name="failure_user_do_not_exist">User does not exist</string>
    <string name="email">prénom.nom</string>
    <string name="password">Password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="create">Je m\'inscris</string>
    <string name="login">Login</string>
    <string name="sort">Trier</string>
    <string name="filter">Filtrer les restaurants</string>
    <string name="welcome">Bienvenue !</string>
    <string name="revolution">Octopus, l\'application qui va révolutionner votre pause déjeuner !</string>
    <string name="confirm_password">Confirm password</string>
    <string name="check_form_failed">Informations manquantes dans le formulaire ou le mot de passe et sa confirmation ne sont pas identiques</string>
    <string name="kisio_com">\@kisio.com</string>
    <string name="hello">Bonjour !</string>
    <string name="what_to_eat">On mange quoi aujourd\'hui ? \n Je me ferais bien des sushis…</string>
    <string name="connection">Connexion</string>

    <!-- Font icons -->
    <string name="icon_check">\ue900</string>
    <string name="icon_cross">\ue901</string>
    <string name="icon_filtre">\ue902</string>
    <string name="icon_navitia">\ue903</string>
    <string name="icon_phone">\ue904</string>
    <string name="icon_pin">\ue905</string>
    <string name="icon_tri">\ue906</string>
    <string name="icon_user">\ue907</string>
</resources>
