<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/app_toolbar"/>

    <com.google.android.gms.maps.MapView
        android:id="@+id/fh_mapview"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/fh_emptySpace"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fh_mapview"/>

    <LinearLayout
        android:id="@+id/fh_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="220dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_corners_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/fh_sort_button"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/shape_background_sort_restaurants">

            <TextView
                android:id="@+id/fh_sort_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/red_color"
                android:fontFamily="@font/octopus_icons"
                android:text="@string/icon_tri"/>

            <TextView
                android:id="@+id/fh_sort_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/sort"
                android:textSize="14sp"
                android:textColor="@color/red_color" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fh_filter_button"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/shape_background_filter_restaurants">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:fontFamily="@font/octopus_icons"
                android:text="@string/icon_filtre"/>

            <TextView
                android:id="@+id/fh_filter_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/filter"
                android:textSize="14sp"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fh_restaurant_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fh_buttons_container"/>

</android.support.constraint.ConstraintLayout>